Added PORT to .env

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 NODE_ENV # production || development
 MONGO_URI # mongo db connection string 
 JWT_SECRET # jsonwebtoken secret
+PORT # backend port (default: 5000)
